--- a/src/app/extraPages/landing-page/landing-page.html
+++ b/src/app/extraPages/landing-page/landing-page.html
@@ -19,7 +19,7 @@
           Una educación que forma personas íntegras y conscientes del mundo que las rodea.
         </p>
         <a
-          class="btn btn-primary btn-lg rounded-pill px-5 py-3"
+          class="btn btn-primary admition-button btn-lg rounded-pill px-5 py-3"
           style="background-color: #de2f31; color: white; border: none"
           (click)="navegacion.irAAdmisiones()"
         >
